--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-handlebars": "^3.0.0",
     "mongojs": "^2.4.0",
     "mongoose": "^4.8.6",
+    "morgan": "^1.8.1",
     "request": "^2.80.0"
   }
 }
